mockers_derive/tests/compile-fail/mocked_struct.rs
use mockers_derive::mocked;

#[mocked]
struct A {
}

fn main() {}
