mockers_derive/tests/compile-fail/mocked_struct.stderr
error: Attribute may be used on traits and extern blocks only
 --> $DIR/mocked_struct.rs:4:1
  |
4 | struct A {
  | ^^^^^^

error: could not compile `mockers_derive-tests`.
